egress/https-wildcard/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-https-ip-through-egress-gateway
spec:
  hosts:
  - "api.tlp.tencent.com"
  gateways:
  - mesh
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - "api.tlp.tencent.com"
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: api-tlp
        port:
          number: 443
